style/mscgen.css
body {
    background-color : white;
    color            : black;
    font-family      : sans-serif;
    font-size        : 12pt;
}
p {
    max-width        : 40em;
}
.code {
    font-family      : Monaco, Consolas, 'Andale Mono', Monaco, monospace;
    font-size        : 0.8em;
    background-color : #555;
    color            : #fff;
}
textarea {
    border           : solid 0px;
    width            : 100%;
    height           : 100%;
}

#input_and_controls {
    z-index          : 0;
    position         : relative;
    float            : left;
    max-width        : 100%;
    max-height       : 100%;
    width            : 30em;
    height           : 25em;
}

#input_and_controls > #btn_render {
    display : none;
}
#input_and_controls > #error_output {
    z-index          : 0;
    color            : orange;
    padding          : 1em 0em 1em 0em;
    border           : solid 1px orange; 
    display          : none;
    width            : 100%;
}
#svg_output {
    z-index : 0;
    vertical-align   : top;
    position: relative;
    float:left;
}
#textcopylightbox {
    z-index : 1;
    position: fixed;
    top : 0px;
    left : 0px;
    width : 100%;
    height : 100%;
    background-color : white;
    opacity : 0.96;
    display : none;
}

#textcopyform {
    position: absolute;
    width : 80%;
    height : 80%;
    top : 10%;
    left: 10%;
    opacity : 1;
    text-align : right;
}
button {
    cursor           : default;
    padding          : 0.3em 0.5em 0.3em 0.5em;
    background-color : #ddd;
    color            : #000;
    border           : none;
    font-size        : inherit;
}
button:hover, .button:hover {
    text-align : center;
    background-color : #555;
    color            : #fff;
}

